Dodan dizajn za home page

--- a/Aplikacija/novi.html
+++ b/Aplikacija/novi.html
@@ -13,7 +13,7 @@
     <title>Sustav za isplatu placa</title>
   </head>
   <body>
-    <nav class="navbar navbar-light" style="background-color: #d6d6d6">
+    <nav class="navbar navbar-light" style="background-color: #dce9f1">
       <a class="navbar-brand" href="http://localhost:5050">
         &nbsp;&nbsp;&nbsp;
         <img
@@ -23,7 +23,7 @@
           class="d-inline-block align-top"
           alt=""
         />
-        &nbsp;&nbsp;&nbsp;LUXE CARS 
+        &nbsp;&nbsp;&nbsp;LUXE CARS NOVI
       </a>
     </nav>
     <div class="container-fluid">
