Dodane ostale stranice i forme, te povezana nasa baza s stranicom

--- a/Aplikacija/index.html
+++ b/Aplikacija/index.html
@@ -13,7 +13,9 @@
     <title>Sustav za isplatu placa</title>
   </head>
   <body>
-    <nav class="navbar navbar-light" style="background-color: #d6d6d6">
+      <!-- Navigacija -->
+
+    <nav class="navbar navbar-light" style="background-color: #F5F7FA">
       <a class="navbar-brand" href="http://localhost:5050">
         &nbsp;&nbsp;&nbsp;
         <img
@@ -26,6 +28,9 @@
         &nbsp;&nbsp;&nbsp;LUXE CARS 
       </a>
     </nav>
+
+        <!-- Funkcije -->
+
     <div class="container-fluid">
       <div class="oblik">
         <div class="row">
@@ -39,7 +44,7 @@
                     <p class="card-text">
                     </br>Funkcija vraća satnicu odabranog zaposlenika. </br>
                     </p>
-                    <a href="#" class="btn btn-primary">Pokreni funkciju</a>
+                    <a href="satnicazaposlenika.html" class="btn btn-primary">Pokreni funkciju</a>
                   </div>
                 </div>
               </div>
@@ -50,7 +55,7 @@
                     <p class="card-text">
                     </br>  Funkcija vraća broj računa koji je zaposlenik izdao. </br>
                     </p>
-                    <a href="#" class="btn btn-primary">Pokreni funkciju</a>
+                    <a href="/brojracuna.html" class="btn btn-primary">Pokreni funkciju</a>
                   </div>
                 </div>
               </div>
@@ -62,7 +67,7 @@
                       Funkcija vraća zbroj radnih sati zaposlenika u određenom
                       mjesecu. 
                     </p>
-                    <a href="#" class="btn btn-primary">Pokreni funkciju</a>
+                    <a href="/brojsatiumjesecu.html" class="btn btn-primary">Pokreni funkciju</a>
                   </div>
                 </div>
               </div>
@@ -74,13 +79,14 @@
                       Funkcija vraća Izračun plaće određenog zaposlenika u
                       mjesecu.
                     </p>
-                    <a href="#" class="btn btn-primary">Pokreni funkciju</a>
+                    <a href="/izracunplace.html" class="btn btn-primary">Pokreni funkciju</a>
                   </div>
                 </div>
               </div>
             </div>
 
-            <!-- Columns are always 50% wide, on mobile and desktop -->
+        <!--Procedure -->
+
             <div class="row mt-4">
               <div class="col-6">
                 <div class="card">
