Dodane javascript za funkcioniranje svih funkcija

--- a/Aplikacija/index.html
+++ b/Aplikacija/index.html
@@ -29,6 +29,37 @@
       </a>
     </nav>
 
+   <!-- 
+    <main>
+      <label>Name:</label>
+      <input type="text" id="name-input">
+      <button id="add-name-btn">Add Name</button>
+
+      <br><br><br>
+      <div>
+         <input placeholder="search by name" id="search-input">
+         <button id="search-btn">Search</button>
+      </div>
+
+      <table id="table">
+          <thead>
+              <th>ID</th>
+              <th>Name</th>
+              <th>Date Added</th>
+              <th>Delete</th>
+              <th>Edit</th>
+          </thead>
+          <tbody></tbody>
+      </table>
+
+      <section hidden id="update-row">
+          <label>Name:</label>
+          <input type="text" id="update-name-input">
+          <button id="update-row-btn">Update</button>
+      </section>
+  </main>
+-->
+
         <!-- Funkcije -->
 
     <div class="container-fluid">
@@ -95,7 +126,7 @@
                     <p class="card-text">
                       Procedura sprema aute u različite grupe ovisno o cijeni.
                     </p>
-                    <a href="#" class="btn btn-primary">Pokreni proceduru</a>
+                    <a href="/sortiranjeauta.html" class="btn btn-primary">Pokreni proceduru</a>
                   </div>
                 </div>
               </div>
@@ -106,7 +137,7 @@
                     <p class="card-text">
                       Procedura sprema koliko je sveukupno novaca kupac potrošio.
                     </p>
-                    <a href="#" class="btn btn-primary">Pokreni proceduru</a>
+                    <a href="/troskovikupca.html" class="btn btn-primary">Pokreni proceduru</a>
                   </div>
                 </div>
               </div>
