--- a/Aplikacija/troskovikupca.html
+++ b/Aplikacija/troskovikupca.html
@@ -10,7 +10,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <title>Broj sati u mjesecu</title>
+    <title>Troškovi kupca</title>
   </head>
   <body>
     <nav class="navbar navbar-light" style="background-color: #F5F7FA">
@@ -32,20 +32,16 @@
         <div class="col">
         </div>
         <div class="col-6">
-          <h4 class="alert-heading">Broj sati u mjesecu</h4>
-  <p>Funkcija vraća zbroj radnih sati zaposlenika u određenom mjesecu.</p>
+          <h4 class="alert-heading">Troškovi kupca</h4>
+  <p>Procedura sprema koliko je sveukupno novaca kupac potrošio.</p>
   <hr>
           <form method="POST">
             <div class="row">
               <div class="col-6">
-                <input type="number" name="idZaposlenik" class="form-control" placeholder="Unesi ID zaposlenika">
-               
-              <input type="number" name="Mjesec" class="form-control" placeholder="Unesi mjesec">
-              
-              <input type="number" name="Godina" class="form-control" placeholder="Unesi godinu">
-              </div>
+                <input type="number" name="idKupac" class="form-control" placeholder="Unesi ID kupca">
+              </div> 
                     <div class="col-6">
-                     <button type="submit" class="btn btn-primary">Pokreni</button>
+                      <button type="submit" class="btn btn-primary">Pokreni</button>
                     </div>           
                </div>  
           </form>
