--- a/Aplikacija/izracunplace.html
+++ b/Aplikacija/izracunplace.html
@@ -39,7 +39,11 @@
             <div class="row">
               <div class="col-6">
                 <input type="number" name="idZaposlenik" class="form-control" placeholder="Unesi ID zaposlenika">
-              </div> 
+               
+                <input type="number" name="Mjesec" class="form-control" placeholder="Unesi mjesec">
+                
+                <input type="number" name="Godina" class="form-control" placeholder="Unesi godinu">
+                </div>
                     <div class="col-6">
                       <button type="submit" class="btn btn-primary">Pokreni</button>
                     </div>           
