--- a/Aplikacija/index.html
+++ b/Aplikacija/index.html
@@ -29,36 +29,6 @@
       </a>
     </nav>
 
-   <!-- 
-    <main>
-      <label>Name:</label>
-      <input type="text" id="name-input">
-      <button id="add-name-btn">Add Name</button>
-
-      <br><br><br>
-      <div>
-         <input placeholder="search by name" id="search-input">
-         <button id="search-btn">Search</button>
-      </div>
-
-      <table id="table">
-          <thead>
-              <th>ID</th>
-              <th>Name</th>
-              <th>Date Added</th>
-              <th>Delete</th>
-              <th>Edit</th>
-          </thead>
-          <tbody></tbody>
-      </table>
-
-      <section hidden id="update-row">
-          <label>Name:</label>
-          <input type="text" id="update-name-input">
-          <button id="update-row-btn">Update</button>
-      </section>
-  </main>
--->
 
         <!-- Funkcije -->
 
@@ -75,7 +45,7 @@
                     <p class="card-text">
                     </br>Funkcija vraća satnicu odabranog zaposlenika. </br>
                     </p>
-                    <a href="satnicazaposlenika.html" class="btn btn-primary">Pokreni funkciju</a>
+                    <a href="/satnicazaposlenika.html" class="btn btn-primary">Pokreni funkciju</a>
                   </div>
                 </div>
               </div>
@@ -147,5 +117,6 @@
         </div>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
