--- a/Aplikacija/index.html
+++ b/Aplikacija/index.html
@@ -117,6 +117,7 @@
         </div>
       </div>
     </div>
+    <p class="footer">TIM 9 - BAZE PODATAKA 2</p>
     <script src="index.js"></script>
   </body>
 </html>
