--- a/Aplikacija/izracunplace.html
+++ b/Aplikacija/izracunplace.html
@@ -54,6 +54,7 @@
         </div>
       </div>
     </div>
+    <p class="footer">TIM 9 - BAZE PODATAKA 2</p>
     <script>
     </script>
   </body>
