--- a/Aplikacija/satnicazaposlenika.html
+++ b/Aplikacija/satnicazaposlenika.html
@@ -50,6 +50,7 @@
         </div>
       </div>
     </div>
+    <p class="footer">TIM 9 - BAZE PODATAKA 2</p>
     <script>
     </script>
   </body>
